--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,14 @@
 
         <!-- Plugin Versions -->
         <version.maven-shade-plugin>3.2.1</version.maven-shade-plugin>
+        <version.sonar-maven-plugin>3.4.1.1168</version.sonar-maven-plugin>
 
         <!-- Setting -->
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sonar.organization>pro-crafting</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <repositories>
