--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>com.pro-crafting.mc</groupId>
     <artifactId>WorldFuscator</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -17,7 +17,7 @@
         <connection>scm:git@github.com:pro-crafting/WorldFuscator.git</connection>
         <url>https://github.com/pro-crafting/WorldFuscator</url>
         <developerConnection>scm:git:git@github.com:pro-crafting/WorldFuscator.git</developerConnection>
-        <tag>WorldFuscator-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <modules>
