fix fastutil version in main pom

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <version.mockito>2.2.15</version.mockito>
         <version.commons-io>2.5</version.commons-io>
         <version.spigot-api>1.14.4-R0.1-SNAPSHOT</version.spigot-api>
-
+        <version.fastutil>8.2.2</version.fastutil>
         <!-- Plugin Versions -->
         <version.maven-shade-plugin>3.2.1</version.maven-shade-plugin>
         <version.sonar-maven-plugin>3.4.1.1168</version.sonar-maven-plugin>
