--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>it.unimi.dsi</groupId>
             <artifactId>fastutil</artifactId>
-            <version>8.2.2</version>
+            <version>${version.fastutil}</version>
             <scope>provided</scope>
         </dependency>
 
