--- a/WarGear/pom.xml
+++ b/WarGear/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.pro-crafting.mc</groupId>
         <artifactId>WorldFuscator</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
