--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.pro-crafting</groupId>
         <artifactId>pc-parent</artifactId>
-        <version>10-SNAPSHOT</version>
+        <version>10</version>
     </parent>
 
     <groupId>com.pro-crafting.mc</groupId>
