--- a/WorldGuard-7/pom.xml
+++ b/WorldGuard-7/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.pro-crafting.mc</groupId>
         <artifactId>WorldFuscator</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.4.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
